fixing api and a lot of stuffs in front
