# doc/api.yaml
@@ -69,7 +69,7 @@ paths:
           description: User log-in action successful
           content: 
               application/json: 
-                schema: { $ref: "#/components/schemas/User/properties/userId" }
+                schema: { $ref: "#/components/schemas/User" }
         "500": { $ref: "#/components/responses/InternalServerError" }        
 
 
@@ -254,7 +254,7 @@ paths:
 
 
 
-  /user/{u_name}:
+  /user/{u_name}/set_username:
     parameters:
     - {  $ref: "#/components/parameters/u_name" }
   
